2006-07-31 Rick L Vinyard Jr <rvinyard@cs.nmsu.edu>
  ===== 0.0.5 =====
  Changed handling of config.h and smart pointer defines

2006-07-29 Rick L Vinyard Jr <rvinyard@cs.nmsu.edu>
  ===== 0.0.4 =====

2006-07-26 Rick L Vinyard Jr <rvinyard@cs.nmsu.edu>
  Environment: Changed assert to assert_fact 

  Added checks to locate boost shared pointer if tr1 shared pointer isn't 
  found. Added support to use whichever form is found.

2006-07-21 Rick L. Vinyard, Jr. <rvinyard@cs.nmsu.edu>
  ===== 0.0.3 =====

  Added Function class for handling deffunctions

  Environment: Added method for getting list head of globals

2006-07-20 Rick L. Vinyard, Jr. <rvinyard@cs.nmsu.edu>
  ===== 0.0.2 =====

  Added Global class to support CLIPS globals

2006-07-18 Rick L Vinyard Jr <rvinyard@cs.nmsu.edu>
  Renamed module() methods module_name() when returning a string name

2006-07-16 Rick L Vinyard Jr <rvinyard@cs.nmsu.edu>
  ===== 0.0.1 =====
  Initial release
