@@ -1,6 +1,8 @@
 2006-07-31 Rick L Vinyard Jr <rvinyard@cs.nmsu.edu>
   ===== 0.0.5 =====
   Changed handling of config.h and smart pointer defines
+  Fixed some signed unsigned compiler warnings
+  Fixed some missing returns in several Value methods
 
 2006-07-29 Rick L Vinyard Jr <rvinyard@cs.nmsu.edu>
   ===== 0.0.4 =====
